----------------------------------------------------
GRAME - Centre national de creation musicale
http://www.grame.fr
research@grame.fr
====================================================
Copyright GRAME (c) 2009,2010

----------------------------------------------------
Version 0.62
- utf8 support on windows corrected
- transparency support for stretched synchronized objects corrected

----------------------------------------------------
Version 0.61
- multiple application instances supported with dynamic udp port number allocation
- command line option with --port portnumber option to set the receive udp port number at startup

----------------------------------------------------
Version 0.60 - July 7 2010
- new xorigin and yorigin messages
- new interaction messages set
- alpha channel handled by images and video
- bug correction in line creation corrected (false incorrect parameter returned)
- bug correction in line 'get' message handling
- memory leak correction (messages not deleted)

known issues: 
- incorrect graphic rendering when sync 'a to b' is changed to 'b to a' in the same update loop

----------------------------------------------------
Version 0.55 - May 27 2010
- ITL parser corrected to support regexp in msg string (needed by messages addressed to sync)
- format of mapping files and strings changed
- sync messages extension to include map name
- signal node: 'garbage' message removed, use regular 'del' message
- new 'reset' message for the application (/ITL) and the scene (/ITL/scene)
- new 'version' message for the application (/ITL)

known issues: 
- incorrect nested synchronization when master is horizontaly stretched,

----------------------------------------------------
Version 0.54 
- new 'reset' message for signals
- bug parsing messages without params corrected
- slave segmentation used for synchronization
- new H synchronization mode (preserves slave segmentation)
- crash bug correction: incorrect messages list for missing ITL files
